--- a/android/build.gradle
+++ b/android/build.gradle
@@ -32,3 +32,7 @@ android {
         disable 'InvalidPackage'
     }
 }
+
+dependencies {
+    implementation 'co.paystack.android:paystack:3.0.10'
+}
